[gd_scene load_steps=8 format=2]

[ext_resource path="res://slime.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/slimeBlue_squashed.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/slimeBlue.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/slimeBlue_blue.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.25
height = 14.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 16.7116
height = 15.1859

[node name="slime" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.148819, 0.603149 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -30.75, -28 )
enabled = true
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 20.25, 0.75 )
rotation = 1.5708
enabled = true
collision_mask = 2

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.853958, 0.216206 )
rotation = 1.5708
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
